...
        app:layout_constraintEnd_toEndOf="@+id/edit_course_name"
        app:layout_constraintStart_toStartOf="@+id/edit_course_name"
        app:layout_constraintTop_toBottomOf="@+id/edit_course_name" />


    <ImageButton
        android:id="@+id/btn_create"
        android:layout_width="@dimen/smaller_icon_width"
        android:layout_height="@dimen/smaller_icon_height"
        app:layout_constraintBottom_toTopOf="@+id/text_create"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

...
