...
        app:layout_constraintTop_toBottomOf="@+id/btn_account" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/share"
        app:layout_constraintEnd_toEndOf="@+id/btn_share"
        app:layout_constraintStart_toStartOf="@+id/btn_share"
        app:layout_constraintTop_toBottomOf="@+id/btn_share" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
...
